Added button for add the new capybara

--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,16 @@
 .selection-arrow {
     font-size: 20px;
 }
+
+#submit-capybara {
+    background-color: #C87629;
+    font-size: 18px;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
+}
